third_party/move/move-compiler-v2/tests/unit_test/test/function_with_spec.exp

Diagnostics:
error: unresolved spec target
   ┌─ tests/unit_test/test/function_with_spec.move:18:10
   │
18 │     spec baz {
   │          ^^^
